# offcenter_oanda

./: .gitignore  CMakeLists.txt  README.md  main.yml  oanda_v20-config.cmake.in
examples/: CMakeLists.txt  list_accounts.cpp  list_candles.cpp
examples/src/: eur_usd_to_csv.cpp
oanda_v20/: CMakeLists.txt  oanda-config.cmake.in
oanda_v20/include/oanda/v20/account/: Account.hpp  AccountChanges.hpp  AccountChangesState.hpp  AccountCommon.hpp  AccountDefinitions.hpp  AccountProperties.hpp  AccountSummary.hpp  AccumulatedAccountState.hpp  CalculatedAccountState.hpp  GuaranteedStopLossOrderParameters.hpp  UserAttributes.hpp
oanda_v20/include/oanda/v20/common/: CommonDefinitions.hpp  OandaCommonException.hpp  String.hpp  Utility.hpp
oanda_v20/include/oanda/v20/endpoint/: Account.hpp  Instrument.hpp  OandaAuthorization.hpp  OandaClient.hpp  OandaConnectionException.hpp  OandaEndpointParameters.hpp  OandaEndpointResponses.hpp  OandaEndpoints.hpp  OandaExceptionFactory.hpp  OandaParameter.hpp  OandaServer.hpp  Order.hpp  Position.hpp  Pricing.hpp  Trade.hpp  Transaction.hpp
oanda_v20/include/oanda/v20/instrument/: Candlestick.hpp  CandlestickData.hpp  CandlestickResponse.hpp  InstrumentCommon.hpp  InstrumentDefinitions.hpp  OrderBook.hpp  OrderBookBucket.hpp  PositionBook.hpp  PositionBookBucket.hpp
oanda_v20/include/oanda/v20/json/: JsonConversion.hpp  JsonToFrom.hpp  RequestJsonToFrom.hpp  ResponseJsonToFrom.hpp
oanda_v20/include/oanda/v20/order/: DynamicOrderState.hpp  FixedPriceOrder.hpp  GuaranteedStopLossOrder.hpp  GuaranteedStopLossOrderEntryData.hpp  GuaranteedStopLossOrderRequest.hpp  LimitOrder.hpp  LimitOrderRequest.hpp  MarketIfTouchedOrder.hpp  MarketIfTouchedOrderRequest.hpp  MarketOrder.hpp  MarketOrderRequest.hpp  Order.hpp  OrderCommon.hpp  OrderDefinitions.hpp  OrderIdentifier.hpp  StopLossOrder.hpp  StopLossOrderRequest.hpp  StopOrder.hpp  StopOrderRequest.hpp  (+6 more)
oanda_v20/src/account/: Account.cpp  AccountChanges.cpp  AccountChangesState.cpp  AccountProperties.cpp  AccountSummary.cpp  AccumulatedAccountState.cpp  CalculatedAccountState.cpp  GuaranteedStopLossOrderParameters.cpp  UserAttributes.cpp
oanda_v20/src/common/: String.cpp
oanda_v20/src/endpoint/: Account.cpp  Instrument.cpp  OandaAuthorization.cpp  OandaClient.cpp  OandaConnectionException.cpp  OandaEndpointParameters.cpp  OandaEndpoints.cpp  OandaExceptionFactory.cpp  Order.cpp  Position.cpp  Pricing.cpp  Trade.cpp  Transaction.cpp  Utility.cpp
oanda_v20/src/instrument/: Candlestick.cpp  CandlestickData.cpp  CandlestickResponse.cpp  InstrumentDefinitions.cpp  OrderBook.cpp  OrderBookBucket.cpp  PositionBook.cpp  PositionBookBucket.cpp
oanda_v20/src/json/: AccountJson.cpp  InstrumentJson.cpp  JsonConversion.cpp  OrderJson.cpp  PositionJson.cpp  PricingJson.cpp  Pricing_CommonJson.cpp  PrimitivesJson.cpp  TradeJson.cpp  TransactionJson.cpp
oanda_v20/src/order/: DynamicOrderState.cpp  FixedPriceOrder.cpp  GuaranteedStopLossOrder.cpp  GuaranteedStopLossOrderEntryData.cpp  GuaranteedStopLossOrderRequest.cpp  LimitOrder.cpp  LimitOrderRequest.cpp  MarketIfTouchedOrder.cpp  MarketIfTouchedOrderRequest.cpp  MarketOrder.cpp  MarketOrderRequest.cpp  Order.cpp  OrderIdentifier.cpp  StopLossOrder.cpp  StopLossOrderRequest.cpp  StopOrder.cpp  StopOrderRequest.cpp  TakeProfitOrder.cpp  TakeProfitOrderRequest.cpp  TrailingStopLossOrder.cpp  TrailingStopLossOrderRequest.cpp  UnitsAvailable.cpp  UnitsAvailableDetails.cpp
oanda_v20/src/position/: CalculatedPositionState.cpp  Position.cpp  PositionSide.cpp
oanda_v20/src/pricing/: ClientPrice.cpp  HomeConversions.cpp  PriceBucket.cpp  PricingHeartbeat.cpp  QuoteHomeConversionFactors.cpp
oanda_v20/src/primitives/: ConversionFactor.cpp  FinancingDayOfWeek.cpp  GuaranteedStopLossOrderLevelRestriction.cpp  HomeConversionFactors.cpp  Instrument.cpp  InstrumentCommission.cpp  InstrumentFinancing.cpp  PrimitivesDefinitions.cpp  Tag.cpp
oanda_v20/src/request/: AccountConfigurationRequest.cpp
oanda_v20/src/response/: AccountChangesResponse.cpp  AccountConfigurationResponse.cpp  AccountInstrumentsResponse.cpp  AccountResponse.cpp  AccountSummaryResponse.cpp  AccountsResponse.cpp
oanda_v20/src/trade/: CalculatedTradeState.cpp  Trade.cpp  TradeSummary.cpp
oanda_v20/src/transaction/: ClientConfigureRejectTransaction.cpp  ClientConfigureTransaction.cpp  ClientExtensions.cpp  CloseTransaction.cpp  CreateTransaction.cpp  DailyFinancingTransaction.cpp  DelayedTradeClosureTransaction.cpp  DividendAdjustmentTransaction.cpp  FixedPriceOrderTransaction.cpp  GuaranteedStopLossDetails.cpp  GuaranteedStopLossOrderRejectTransaction.cpp  GuaranteedStopLossOrderTransaction.cpp  LimitOrderRejectTransaction.cpp  LimitOrderTransaction.cpp  LiquidityRegenerationSchedule.cpp  LiquidityRegenerationScheduleStep.cpp  MarginCallEnterTransaction.cpp  MarginCallExitTransaction.cpp  MarginCallExtendTransaction.cpp  MarketIfTouchedOrderRejectTransaction.cpp  MarketIfTouchedOrderTransaction.cpp  MarketOrderDelayedTradeClose.cpp  MarketOrderMarginCloseout.cpp  MarketOrderPositionCloseout.cpp  MarketOrderRejectTransaction.cpp  MarketOrderTradeClose.cpp  MarketOrderTransaction.cpp  OpenTradeDividendAdjustment.cpp  OpenTradeFinancing.cpp  OrderCancelRejectTransaction.cpp  OrderCancelTransaction.cpp  OrderClientExtensionsModifyRejectTransaction.cpp  OrderClientExtensionsModifyTransaction.cpp  OrderFillTransaction.cpp  PositionFinancing.cpp  ReopenTransaction.cpp  ResetResettablePLTransaction.cpp  StopLossDetails.cpp  StopLossOrderRejectTransaction.cpp  StopLossOrderTransaction.cpp  (+16 more)
oanda_v20/test/: CMakeLists.txt
oanda_v20/test/include/: GlobalVariables.hpp  OandaEndpointParametersFixture.hpp  OandaEndpointsFixture.hpp  WaitForMessage.hpp
oanda_v20/test/src/: GlobalVariables.cpp  OandaEndpointParametersFixture.cpp  OandaEndpointsFixture.cpp  account_json_test.cpp  account_test.cpp  basic_build_test.cpp  endpoint_parameters_test.cpp  instrument_test.cpp  json_test.cpp  main.cpp  oanda_exception_test.cpp  order_test.cpp  pricing_test.cpp  string_test.cpp  utility_test.cpp
(+3412 files in other folders)
